@@ -61,13 +61,13 @@ public class S3fs extends Hfs
   /**
    * Constructor S3fs creates a new S3fs instance.
    *
-   * @param sourceFields     of type Fields
-   * @param uri              of type URI
-   * @param deleteOnSinkInit of type boolean
+   * @param sourceFields of type Fields
+   * @param uri          of type URI
+   * @param replace      of type boolean
    */
-  public S3fs( Fields sourceFields, URI uri, boolean deleteOnSinkInit )
+  public S3fs( Fields sourceFields, URI uri, boolean replace )
     {
-    super( sourceFields, uri.getPath(), deleteOnSinkInit );
+    super( sourceFields, uri.getPath(), replace );
 
     if( !uri.getScheme().equalsIgnoreCase( "s3" ) )
       throw new IllegalArgumentException( "uri must use the s3 scheme" );
@@ -146,29 +146,29 @@ public class S3fs extends Hfs
   /**
    * Constructor S3fs creates a new S3fs instance.
    *
-   * @param scheme       of type Scheme
-   * @param id           of type String
-   * @param secret       of type String
-   * @param bucket       of type String
-   * @param stringPath   of type String
-   * @param deleteOnInit of type boolean
+   * @param scheme     of type Scheme
+   * @param id         of type String
+   * @param secret     of type String
+   * @param bucket     of type String
+   * @param stringPath of type String
+   * @param replace    of type boolean
    */
-  public S3fs( Scheme scheme, String id, String secret, String bucket, String stringPath, boolean deleteOnInit )
+  public S3fs( Scheme scheme, String id, String secret, String bucket, String stringPath, boolean replace )
     {
-    super( scheme, stringPath, deleteOnInit );
+    super( scheme, stringPath, replace );
     setUriScheme( makeURI( id, secret, bucket ) );
     }
 
   /**
    * Constructor S3fs creates a new S3fs instance.
    *
-   * @param scheme       of type Scheme
-   * @param stringPath   of type String
-   * @param deleteOnInit of type boolean
+   * @param scheme     of type Scheme
+   * @param stringPath of type String
+   * @param replace    of type boolean
    */
-  public S3fs( Scheme scheme, String stringPath, boolean deleteOnInit )
+  public S3fs( Scheme scheme, String stringPath, boolean replace )
     {
-    super( scheme, stringPath, deleteOnInit );
+    super( scheme, stringPath, replace );
     }
 
   @Override
